# pdfextract

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: extractor.hpp  table_extractor.hpp
src/: extractor.cpp  table_extractor.cpp
tests/: test_parse.cpp
